--- a/css/style.css
+++ b/css/style.css
@@ -79,12 +79,12 @@ hr {
 	transition: all 0.8s;
 }
 #menu.navbar-default {
-	background-color: rgba(248, 248, 248, 0);
-	border-color: rgba(231, 231, 231, 0);
+	background-color: rgb(0, 0, 0);
+	border-color: rgb(0, 0, 0);
 }
 #menu a.navbar-brand {
 	font-size: 22px;
-	color: #ddd;
+	color: rgb(221, 221, 221);
 	font-weight: 700;
 }
 #menu a.navbar-brand i.fa {
@@ -122,11 +122,11 @@ hr {
 }
 /* Home Style */
 header {
-	background: url(../img/fondo3.png) no-repeat bottom center;
+	background: url(../img/fondo4.png) no-repeat bottom center;
 	background-size: cover;
 	color: #cfcfcf;
 	position: relative;
-	height: 100%;
+	height: 700px;
 }
 header p {
 	color: rgba(255,255,255,0.5);
