--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ hr {
 }
 /* Home Style */
 header {
-	background-image: url(../img/fondo6.jpeg);
+	background-image: url(../img/fondo10.jpg);
 	height: 100%;
   	text-align: center;
 	background-size: cover;
