--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ hr {
 }
 /* Home Style */
 header {
-	background-image: url(../img/fondo10.jpg);
+	background-image: url(../img/1.jpg);
 	height: 100%;
   	text-align: center;
 	background-size: cover;
